Corrected split select and triple select horizontal spacing between its fields

--- a/packages/styles/src/_engrid-fields.scss
+++ b/packages/styles/src/_engrid-fields.scss
@@ -612,51 +612,52 @@ input.en__contactDetails__select {
 .en__field__element--splittext .en__field__item:nth-of-type(1),
 .en__field__element--splitselect:not(.en__field--ccexpire)
   .en__field__item:nth-of-type(1) {
-  flex-basis: 50% !important;
-  padding-left: 0rem !important;
-  padding-bottom: 0.5rem !important;
-  margin: 0 !important;
+  flex-basis: 50%;
+  padding-left: 0rem;
+  padding-right: 0.5rem;
+  padding-bottom: 0.5rem;
+  margin: 0;
 }
 
 /* Includes overrides of existing CSS, need for resolve this duplicate styling */
 .en__field__element--splittext .en__field__item:nth-of-type(2),
 .en__field__element--splitselect:not(.en__field--ccexpire)
   .en__field__item:nth-of-type(2) {
-  flex-basis: 50% !important;
-  padding-left: 0.5rem !important;
-  padding-right: 0rem !important;
-  padding-bottom: 0.5rem !important;
-  margin: 0 !important;
+  flex-basis: 50%;
+  padding-left: 0.5rem;
+  padding-right: 0rem;
+  padding-bottom: 0.5rem;
+  margin: 0;
 }
 
 /* Includes overrides of existing CSS, need for resolve this duplicate styling */
 .en__field__element--tripletext .en__field__item:nth-of-type(1),
 .en__field__element--tripleselect .en__field__item:nth-of-type(1) {
-  flex-basis: 33.33333% !important;
-  padding-left: 0rem !important;
-  padding-right: 0.5rem !important;
-  padding-bottom: 0.5rem !important;
-  margin: 0 !important;
+  flex-basis: calc(100% / 3);
+  padding-left: 0rem;
+  padding-right: 0.5rem;
+  padding-bottom: 0.5rem ;
+  margin: 0;
 }
 
 /* Includes overrides of existing CSS, need for resolve this duplicate styling */
 .en__field__element--tripletext .en__field__item:nth-of-type(2),
 .en__field__element--tripleselect .en__field__item:nth-of-type(2) {
-  flex-basis: 33.33333% !important;
-  padding-left: 0.5rem !important;
-  padding-right: 0.5rem !important;
-  padding-bottom: 0.5rem !important;
+  flex-basis: calc(100% / 3);
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-bottom: 0.5rem;
   margin: 0 !important;
 }
 
 /* Includes overrides of existing CSS, need for resolve this duplicate styling */
 .en__field__element--tripletext .en__field__item:nth-of-type(3),
 .en__field__element--tripleselect .en__field__item:nth-of-type(3) {
-  flex-basis: 33.33333% !important;
-  padding-left: 0.5rem !important;
-  padding-right: 0rem !important;
-  padding-bottom: 0.5rem !important;
-  margin: 0 !important;
+  flex-basis: calc(100% / 3);
+  padding-left: 0.5rem;
+  padding-right: 0rem;
+  padding-bottom: 0.5rem;
+  margin: 0;
 }
 
 .en__component--formblock.manual-form-layout {
